--- a/index.html
+++ b/index.html
@@ -2,18 +2,28 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+
+        <meta name="description"
+        content="Projeto feito durante o NLW da rocketseat"/>
+
+        <meta name="author" content="Luan Fernando" />
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="stylesheet" href="assets/style.css">
+
+        <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/d63b1a3b89.js" crossorigin="anonymous"></script>
+
+        <!-- favicon -->
         <link rel="shortcut icon" href="/assets/favicon/favicon.ico" type="image/x-icon">
-        <title>NLW eSports</title>
+        <title>NLW eSports | Jogos</title>
     </head>
     <body>
         
        <header>
             <nav class="header-nav">
                 <ul>
-                    <li><a href="/musica/musica.html" target="_blank">Musica</a></li>
                     <li><a href="/serie/serie.html" target="_blank">Series</a></li>
                 </ul>
             </nav>
@@ -80,7 +90,7 @@
 
                     <li>
                         <a href="https://www.twitch.tv/cellbit" target="_blank" >
-                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/cb885149-f7f7-48f0-99ae-fe0a386ed3e2-profile_image-150x150.png" alt="Foto do Streamer Cellbit">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/0595cdd0-65a7-4fa3-996d-323cf3a54be1-profile_image-150x150.png" alt="Foto do Streamer Cellbit">
                         </a>
                     </li>
                     
@@ -93,7 +103,7 @@
 
                     <li>
                         <a href="https://www.twitch.tv/calango" target="_blank" >
-                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/f401c96a-48a3-4e40-b402-d6bad9d1079f-profile_image-150x150.png" alt="Foto do Streamer Calango">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/1c856333-b570-4f75-a6f0-c2965ef82598-profile_image-150x150.png" alt="Foto do Streamer Calango">
                         </a>
                     </li>
 
