--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script src="https://kit.fontawesome.com/d63b1a3b89.js" crossorigin="anonymous"></script>
 
         <!-- favicon -->
-        <link rel="shortcut icon" href="/assets/favicon/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
         <title>NLW eSports | Jogos</title>
     </head>
     <body>
@@ -24,7 +24,7 @@
        <header>
             <nav class="header-nav">
                 <ul>
-                    <li><a href="/serie/serie.html" target="_blank">Series</a></li>
+                    <li><a href="serie/serie.html" target="_blank">Series</a></li>
                 </ul>
             </nav>
 
