fixing href on serie page

--- a/serie/serie.html
+++ b/serie/serie.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/serie/style.css">
-        <link rel="shortcut icon" href="/assets/favicon/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="serie/style.css">
+        <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
         <script src="https://kit.fontawesome.com/d63b1a3b89.js" crossorigin="anonymous"></script>
         <title>NLW eSports | Series</title>
     </head>
